Fix class mistakes in css and spacing in html

--- a/css/main.css
+++ b/css/main.css
@@ -149,13 +149,13 @@ p {
   margin: 1rem 0 0 1rem;
 }
 
-h2 {
+.catering h2 {
   font-size: 1.3rem;
   margin: 5rem 1rem 1rem 0;
   text-align: right;
 }
 
-p {
+.catering p {
   margin: 0 1rem 1rem 0;
   display: block;
   font-size: .95rem;
@@ -257,13 +257,13 @@ a {
   margin: 1rem 0 0 1rem;
 }
 
-h2 {
+.second-shop h2 {
   font-size: 1.3rem;
   margin: 5rem 1rem 1rem 0;
   text-align: right;
 }
 
-p {
+.second-shop p {
   margin: 0 1rem 1rem 0;
   display: block;
   font-size: .95rem;
@@ -312,13 +312,13 @@ p {
   margin: 1rem 0 0 1rem;
 }
 
-h2 {
+.about-us h2 {
   font-size: 1.3rem;
   margin: 5rem 1rem 1rem 0;
   text-align: right;
 }
 
-p {
+.about-us p {
   margin: 0 1rem 1rem 0;
   display: block;
   font-size: .95rem;
@@ -432,13 +432,13 @@ ul {
   margin: 1rem 0 0 1rem;
 }
 
-h2 {
+.reward h2 {
   font-size: 1.3rem;
   margin: 5rem 1rem 1rem 0;
   text-align: right;
 }
 
-p {
+.reward p {
   margin: 0 1rem 1rem 0;
   display: block;
   font-size: .95rem;
@@ -488,7 +488,7 @@ p {
   margin: 1rem 0 0 1rem;
 }
 
-h2 {
+.second-rewards h2 {
   font-size: 1.3rem;
   margin: 5rem 1rem 1rem 0;
   text-align: right;
@@ -615,8 +615,6 @@ h2 {
     font-size: 1.3rem;
     margin-bottom: .5rem;
   }
-
-
 
   .shop .text h2 {
     font-size: 1.5rem;
@@ -795,10 +793,6 @@ h2 {
     display: inline-block;
     bottom: 10%;
     margin: 0 5rem 1rem 0;
-  }
-
-  .rewards-card {
-    display: none;
   }
 
   .second-rewards {
